<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name:</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="choco">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="initial_quantity_value">1</string>
    <string name="increase">+</string>
    <string name="order">ORDER</string>
    <string name="Thank_you">Thank You!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">AddWhippedCream?<xliff:g id="AddWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_choco">Add Chocolate?<xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity<xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="order_summary_price">total: <xliff:g id="price" example="10$">%s</xliff:g></string>
    <string name="order_summary_Thank_you">Thank you!</string>
    <string name="order_summary_email_subject">Just java order coffee for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
